update jvm-gc-g1-1 log analysis